# airas-20251022-083800-matsuzawa

./: pyproject.toml
.github/workflows/: run_full_experiment_with_open_code_2.yml  run_trial_experiment_with_open_code_2.yml
.research/: research_history.json
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
.research/prompt/summarize_paper_subgraph/: summarize_paper_0.txt
config/: config.yaml
config/run/: comparative-1-2-Layer-MLP-0.1M-parameters--Fashion-MNIST.yaml  proposed-2-Layer-MLP-0.1M-parameters--Fashion-MNIST.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
