[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-boil-experiments"
version = "0.1.0"
description = "Reproducible experiments for CA-BOIL vs BOIL on Fashion-MNIST"
authors = [{name = "AI Researcher", email = "research@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "optuna>=3.4.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.3",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]